--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "lang": "es",
   "short_name": "Soporte PSST",
   "name": "Soporte plataforma PSST",
   "description": "Sitio oficial de soporte para la plataforma PSST del Miniterio de Trabajo Empleo y Previsión Social",
@@ -11,17 +12,20 @@
     {
       "src": "/images/64.png",
       "type": "image/png",
-      "sizes": "64x64"
+      "sizes": "64x64",
+      "purpose": "any maskable"
     },
     {
       "src": "/images/144.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "144x144",
+      "purpose": "any maskable"
     },
     {
       "src": "/images/216.png",
       "type": "image/png",
-      "sizes": "216x216"
+      "sizes": "216x216",
+      "purpose": "any maskable"
     },
     {
       "src": "/images/512.png",
@@ -33,5 +37,6 @@
   "background_color": "#2a2a2a",
   "display": "standalone",
   "scope": "/",
+  "orientation": "portrait",
   "theme_color": "#2a2a2a"
 }
