--- a/manifest.json
+++ b/manifest.json
@@ -34,9 +34,9 @@
     }
   ],
   "start_url": "/index.html",
-  "background_color": "#2a2a2a",
+  "background_color": "#7e4e6e",
   "display": "standalone",
   "scope": "/",
   "orientation": "portrait",
-  "theme_color": "#2a2a2a"
+  "theme_color": "#7e4e6e"
 }
